# avionics-bay

./: DOCUMENTATION.md  README  README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  api.cpp  api.hpp  avionicsbay_lua_include.lua  cifp_parser.cpp  cifp_parser.hpp  constants.hpp  data_file_reader.cpp  data_file_reader.hpp  data_types.hpp  plugin.cpp  plugin.hpp  test.lua  triangulator.cpp  triangulator.hpp  wmm_interface.cpp  wmm_interface.hpp  xpdata.cpp  xpdata.hpp
src/utilities/: earcut.hpp  filesystem.hpp  logger.cpp  logger.hpp
src/wmm/: GeomagnetismHeader.h  GeomagnetismLibrary.cpp
